[package]
name = "blog-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.4"
serde = { version = "1.0.219" , features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.45", features = ["full"] }
tracing-subscriber = "0.3.19"
tracing = "0.1.37"
tera = "1.20.0"
sqlx = { version = "0.8", features = [ "runtime-tokio", "tls-native-tls", "postgres" ] }
redis = { version = "0.32.2" }
deadpool-redis = "0.21.1"
dotenvy = "0.15.7"
anyhow = "1.0.98"
yaml-front-matter = "0.1.0"
chrono = { version = "0.4.41", features = ["serde"] }
markdown = "1.0.0"
aws-config = "1.8.2"
aws-sdk-s3 = "1.98.0"
futures = "0.3.31"

